// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse dashlord config when multiple urls input 1`] = `
[
  {
    "repositories": [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "subpages": [
      "https://www.free.fr",
    ],
    "title": "Free",
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": false,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "https://www.free.fr",
  },
  {
    "pages": [
      "/login",
      "/profile",
    ],
    "repositories": [
      "chez/chez-ui",
      "chez/chez-api",
    ],
    "subpages": [
      "http://chez.com",
      "http://chez.com/login",
      "http://chez.com/profile",
    ],
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": false,
      "stats": false,
      "testssl": true,
      "thirdparties": true,
      "updownio": false,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "http://chez.com",
  },
]
`;

exports[`should parse dashlord config when no input 1`] = `
[
  {
    "repositories": [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "subpages": [
      "https://www.free.fr",
    ],
    "title": "Free",
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": false,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "https://www.free.fr",
  },
  {
    "pages": [
      "/login",
      "/profile",
    ],
    "repositories": [
      "chez/chez-ui",
      "chez/chez-api",
    ],
    "subpages": [
      "http://chez.com",
      "http://chez.com/login",
      "http://chez.com/profile",
    ],
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": false,
      "stats": false,
      "testssl": true,
      "thirdparties": true,
      "updownio": false,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "http://chez.com",
  },
  {
    "subpages": [
      "https://voila.fr",
    ],
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": false,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "https://voila.fr",
  },
]
`;

exports[`should parse dashlord config when single invalid url input 1`] = `[]`;

exports[`should parse dashlord config when single valid url input 1`] = `
[
  {
    "repositories": [
      "iliad/free-ui",
      "iliad/free-api",
    ],
    "subpages": [
      "https://www.free.fr",
    ],
    "title": "Free",
    "tools": {
      "404": true,
      "budget_page": true,
      "codescan": true,
      "declaration-a11y": true,
      "declaration-rgpd": true,
      "dependabot": true,
      "dsfr": true,
      "ecoindex": true,
      "http": true,
      "lighthouse": true,
      "nmap": true,
      "nuclei": false,
      "screenshot": true,
      "stats": true,
      "testssl": false,
      "thirdparties": true,
      "updownio": true,
      "wappalyzer": true,
      "zap": true,
    },
    "url": "https://www.free.fr",
  },
]
`;

exports[`should parse dashlord config with inputs.tool 1`] = `
[
  {
    "subpages": [
      "https://voila.fr",
    ],
    "tools": {
      "lighthouse": true,
    },
    "url": "https://voila.fr",
  },
]
`;
